<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tagging</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="_tagging">#Tagging</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="last_name">Last Name</string>
    <string name="signup">Signup</string>

</resources>
